# xml-unpacker

./: .replit  README.md  XML_unpacker_for_colab.ipynb  XML_unpacker_for_collab.ipynb  XML_unpacker_on_colab.ipynb  main.py  pyproject.toml
input/: spooky_kids_assets.xml.xml
